# STX-Secure-Transfer

./: CMakeLists.txt  DESIGN.md  README.md
common/: CMakeLists.txt  common.h  crypto.cpp  crypto.h  socket.cpp  socket.h  transfer.cpp  transfer.h
keys/: recv_priv.pem  recv_pub.pem  send_priv.pem  send_pub.pem
stx-recv/: CMakeLists.txt  main.cpp
stx-send/: CMakeLists.txt  main.cpp
tests/: crypto_tests.cpp  integration_test.py
